@@ -1,3 +1,7 @@
+2005-08-23  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-chunksize): Improve docstring.
+
 2005-08-21  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el: Rewrite communication functions in order to apply them
